<resources>
    <string name="app_name">I LOVE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_love" translatable="false">Cool</string>
    <string name="action_play">Play</string>
    <string name="action_share">Share</string>
    <string name="action_more">More</string>
    <string name="action_see_awards">See Awards</string>
    <string name="action_continue">Continue</string>
    <string name="action_help">Help</string>
    <string name="menu_more_features">More Features</string>
    <string name="menu_awards">Awards</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_top">Top Scores</string>
    <string name="menu_send">Send Feedback</string>
    <string name="word_level">Level</string>
    <string name="word_error">Error:</string>
    <string name="text_thank_you_premium">Thank you for upgrading to premium!</string>
    <string name="text_thank_you_unlimited_quotes">Thank you for upgrading to unlimited quotes!</string>
    <string name="text_thank_you_unlimited_awards">Thank you for upgrading to unlimited awards!</string>
    <string name="text_wait">Please wait</string>
    <string name="text_launch_in_app">Launching In app</string>
    <string name="word_points">points</string>
    <string name="text_about">
        \'I Love\' is an awesome application natively coded in Kotlin. At the beginning, the goal was to draw a beautiful heart.\nThen, the idea to create a simple game with little hearts came.\nFind the easter eggs by touching everywhere ;)</string>
    <string name="text_best_score">You\'ve bested yourself!</string>
    <string name="subject_feedback">Feedback on the \'I Love\' app.</string>
    <string name="text_share_app">Be part of the adventure with \'I Love\' app in Beta:</string>
    <string name="url_app" translatable="false">https://play.google.com/apps/testing/com.chillcoding.ilove</string>
    <string name="title_chillcoding">By ChillCoding</string>
    <string name="title_pref_sound">Play Music</string>
    <string name="about_app">An application made by ChillCoding</string>
    <string name="title_android" translatable="false">Android</string>
    <string name="title_gitlab" translatable="false">GitLab</string>
    <string name="title_kotlin" translatable="false">Kotlin</string>
    <string name="title_material_design" translatable="false">Material Design</string>
    <string name="title_android_studio" translatable="false">Android Studio</string>
    <string name="slogan_chillcoding" translatable="false">#Work is better at the beach.</string>
    <string name="word_award">Award:</string>
    <string name="word_best_score">Best Score</string>
    <string name="text_record_breaker">Record Breaker!</string>
    <string name="text_share_score">I caught</string>
    <string name="text_share_award">I win an award with \'I Love\'!</string>
    <string name="word_with">with</string>
    <string name="text_permissions_explanation">The Application need permissions for the in-app purchase.</string>
    <string name="text_waiting_explanation">Waiting for connection&#8230;</string>
    <string name="text_no_internet_in_top_scores">Cannot update top scores because of internet connection.</string>
    <string name="get_premium_text">Available with Premium version.</string>
    <string name="server_error_text">Cannot have latest top scores, try later.</string>
    <string name="failure">Come On&#8230;</string>
    <string name="you_can_better_text">You can do better!</string>
    <string name="text_from">from \'I Love\' app:</string>
    <string-array name="word_success">
        <item>Genius</item>
        <item>Brilliant</item>
        <item>Awesome</item>
        <item>Exceptional</item>
        <item>Impeccable</item>
        <item>Perfect</item>
    </string-array>
    <string-array name="text_love">
        <item>GOOD\nVIBES\nONLY.</item>
        <item>DON\'T WORRY\nBE HAPPY.\n-> Bobby McFerrin</item>
        <item>ALL YOU\nNEED IS\nLOVE.</item>
        <item>ONE LOVE\nONE HEART\nONE LIFE\nONE DESTINY.</item>
        <item>FOLLOW YOUR DREAMS.</item>
        <item>EVERY\nTHING\nHAPPENS\nFOR A REASON.</item>
        <item>THINK Positively\nEXERCISE Daily\nEAT Healthy\nWORK Hard\n STAY Strong\nWORRY Less\nDANCE More\nLOVE Often\nBE Happy.</item>
        <item>SMILING\nLEADS TO\nHAPPINESS.</item>
        <item>WHAT\nA\nSMALL\nWORLD.</item>
        <item>THE GOOD\nTHINGS IN\nLIFE\nARE BETTER\nWITH YOU!</item>
        <item>YOU ARE\nMY BUTTER\nHALF.</item>
        <item>WE FALL IN\nLOVE\nBY CHANCE\nWE STAY IN\nLOVE\nBY CHOICE.</item>
        <item>WHERE IS\nLOVE\nTHERE IS\nLIFE.</item>
        <item>YOU KNOW\nYOU ARE IN\nLOVE\nWHEN YOU CAN\'T\nFALL ASLEEP\nBECAUSE REALITY\nIS FINALLY\nBETTER THAN YOUR\nDREAMS.</item>
        <item>ALONE\nWE GO FASTER\nTOGETHER\nWE GO FURTHER.\n-> African proverb</item>
        <item>DIFFICULT ROADS\nOFTEN\nLEAD TO\nBEAUTIFUL\nDESTINATIONS.</item>
        <item>THE\nEXPERT AT\nANYTHING\nWAS\nONCE A\nBEGINNER.\n-> Helen Hayes</item>
        <item>EVERYTHING\nWILL BE\nOK IN\nTHE END.\nIF IT’S NOT OK\nIT’S NOT\nTHE END.</item>
        <item>THIS IS A TEST\nIF YOU CAN\nREAD THIS\nALL THE WAY\nDOWN TO HERE\nPLEASE\nGET OFF MY COMPUTER.</item>
        <item>TO BE A\nCHAMP\nYOU HAVE TO\nBELIEVE\nIN YOURSELF\nWHEN NOBODY\nELSE WILL.\n-> Sugar Ray Robinson</item>
        <item>ONE\nDAY\nAT A TIME.</item>
        <item>TO IMPROVE\nIS TO CHANGE\nTO BE PERFECT\nIS TO CHANGE OFTEN.\n-> Winston Churchill</item>
        <item>THE ONLY WAY\nTO DO\nGREAT WORK\nIS TO\nLOVE\nWHAT YOU DO.\n-> Steve Jobs</item>
    </string-array>
    <string-array name="word_mode">
        <item>♡</item>
        <item>I ♡️</item>
        <item>I ♡ 🌵️️</item>
        <item>I ♡ 🌊</item>
        <item>I ♡ ⛰</item>
        <item>I ♡ ⭐</item>
        <item>I ♡ 🏝</item>
        <item>I ♡ 🦀</item>
    </string-array>
    <string name="text_rules">
    "♡ The goal of the game is to catch as many hearts as possible.\n-> ❤️👆\n"
    "\n❤️ The three red hearts, in the center, indicate the number of lives remaining, before the end of the game.\n-> ❤️ ❤️ ♡\n"
    "\n💚 The green gauge (in the right) indicates progress to the next level."
"\nIt also shows the current level in the center."
"\nFor each heart caught, one point is earned at level 1, 2 points at level 2, and so on."
"\n-> Level  1: ❤️+👆 = 1 point"
"\n-> Level 2: ❤️+👆 = 2 points"
"\n-> Level k: ❤️+👆 = k points\n"
    "\n💛 The yellow gauge (in the left) indicates progress towards the next award."
"\nIt also shows the current score in the center."
"\nReaching defined thresholds, an award is unlocked."
"\nThis limit follows a secret algorithm."
"\n-> n points = 🏆\n"
    "\n🏆 The 'Awards' section, accessible via the side menu, presents all the unlocked awards."
"\nThe best score is indicated in the last unlocked award.\n"
    "\n⭐ The 'Top Scores' section displays the top 10 scores of the 'I Love' players.\n"
        "\n💝 There are some easter eggs hidden in the app, touch everywhere and see what happens."
"\nFollow @ILoveKotlin on Social networks to keep in touch about them."
        "\nFind more in `About` section."
    </string>
    <string name="title_rules">~ Rules of the game ~</string>
    <string name="symbol_end" translatable="false">~♡~♡~♡~</string>
    <string name="text_purchase">This game is the result of two developers and a lot of passion. ♡\nYour support is very important for us.</string>
    <string name="title_purchase_premium">⭐ Premium ⭐</string>
    <string name="title_purchase_quotes">❣️Unlimited Quotes❣️</string>
    <string name="text_purchase_premium">"⭐ Unlimited access to all the features 💛"
        "\n+ Access to all the quotes ❣️"
        "\n+ Share quotes with friends ❣️"
        "\n+ Access to all the unlocked awards 🏆"
        "\n+ Access to all the future modes (soon) 💘"</string>
    <string name="action_buy">Buy</string>
    <string name="subtitle_purchase_premium">Price: €0.99</string>
    <string name="subtitle_purchase_features">Price: €0.50</string>
    <string name="title_purchase_awards">🏆 Unlimited Awards 🏆</string>
</resources>