<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_premium"
            android:icon="@drawable/ic_menu_purchase_up"
            android:title="@string/menu_premium" />
        <item
            android:id="@+id/nav_more_features"
            android:icon="@drawable/ic_menu_purchase"
            android:title="@string/menu_more_features"
            android:visible="false" />
    </group>
    <group android:id="@+id/menu_cool">
        <item
            android:id="@+id/nav_awards"
            android:icon="@drawable/ic_menu_awards"
            android:title="@string/menu_awards"
            android:visible="true" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings"
            android:visible="true" />
        <item
            android:id="@+id/nav_top"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_top"
            android:visible="true" />
    </group>
    <group android:id="@+id/menu_communicate">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/action_share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_send" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_beach_access"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:orderInCategory="100"
            android:title="@string/action_help" />
    </group>

</menu>
